ENS_MOTE_R2_2 설정 추가

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ settings
 *.map
 *.lst
 *~
+/.vscode
 /projects/telosb/00std_button/path.txt
 /projects/telosb/00std_xon_xoff/path.txt
 /projects/telosb/03oos_openwsn/path.txt
